--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <li><a href="/tourisme">Tourisme</a></li>
         <li><a href="/actualites">Actualités</a></li>
         <li><a href="/contact">Contact</a></li>
-        <li><a href="/login">Se connecter</a></li>
+        <li><a href="/login/login.html">Se connecter</a></li>
       </ul>
     </nav>
   </header>
