--- a/login/login.html
+++ b/login/login.html
@@ -37,8 +37,8 @@
   <section class="services-intro">
     <h1>Se connecter</h1>
     <form id="login-form" style="max-width:400px;margin:20px auto;text-align:left">
-      <label>Code Social</label>
-      <input type="text" id="socialCode" required style="width:100%;margin:8px 0;padding:10px">
+      <label>Email</label>
+      <input type="email" id="email" required style="width:100%;margin:8px 0;padding:10px">
 
       <label>Mot de passe</label>
       <input type="password" id="password" required style="width:100%;margin:8px 0;padding:10px">
@@ -49,26 +49,23 @@
 
       <button type="submit" class="btn" style="width:100%">Se connecter</button>
     </form>
-    <p style="text-align:center">Je n'ai pas de compte ? <a href="/register">Créer un compte</a></p>
+    <p style="text-align:center">Pas encore de compte ? <a href="/register.html">Créer un compte</a></p>
   </section>
 
   <script type="module">
     import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm"
 
     const supabaseUrl = "https://ctdleonvxornpnbecqqf.supabase.co"
-    const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImN0ZGxlb252eG9ybnBuYmVjcXFmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTcyNjA1NDMsImV4cCI6MjA3MjgzNjU0M30.3X0QB-W26Rwj_PkOLu39Sq8gH1o-1AGZq2yHfQO9uEg"
+    const supabaseKey = "TON_SUPABASE_KEY_ICI"
     const supabase = createClient(supabaseUrl, supabaseKey)
 
     const form = document.getElementById("login-form")
     form.addEventListener("submit", async (e) => {
       e.preventDefault()
-      const socialCode = document.getElementById("socialCode").value
+      const email = document.getElementById("email").value
       const password = document.getElementById("password").value
 
-      const { data, error } = await supabase.auth.signInWithPassword({
-        email: socialCode + "@quenada.qc", // hack : email basé sur code social
-        password
-      })
+      const { error } = await supabase.auth.signInWithPassword({ email, password })
 
       if (error) {
         alert("Erreur : " + error.message)
@@ -80,4 +77,3 @@
   </script>
 </body>
 </html>
-
