--- a/login/register/index.html
+++ b/login/register/index.html
@@ -97,7 +97,7 @@
         alert("Erreur : " + error.message)
       } else {
         alert("Compte créé ✅ Vérifie ton email pour confirmer ton compte.")
-        window.location.href = "/login"
+        window.location.href = "../login"
       }
     })
   </script>
