--- a/login/login/index.html
+++ b/login/login/index.html
@@ -49,7 +49,7 @@
 
       <button type="submit" class="btn" style="width:100%">Se connecter</button>
     </form>
-    <p style="text-align:center">Pas encore de compte ? <a href="/register.html">Créer un compte</a></p>
+    <p style="text-align:center">Pas encore de compte ? <a href="../register">Créer un compte</a></p>
   </section>
 
   <script type="module">
