--- a/login/login/index.html
+++ b/login/login/index.html
@@ -21,14 +21,14 @@
   <header>
     <nav>
       <ul>
-        <li><a href="/">Accueil</a></li>
-        <li><a href="/services">Service citoyen</a></li>
-        <li><a href="/gouvernement">Gouvernement</a></li>
-        <li><a href="/documents">Documents</a></li>
-        <li><a href="/tourisme">Tourisme</a></li>
-        <li><a href="/actualites">Actualités</a></li>
-        <li><a href="/contact">Contact</a></li>
-        <li><a href="/login" class="active">Se connecter</a></li>
+        <li><a href="../../">Accueil</a></li>
+        <li><a href="../../services">Service citoyen</a></li>
+        <li><a href="../../gouvernement">Gouvernement</a></li>
+        <li><a href="../../documents">Documents</a></li>
+        <li><a href="../../tourisme">Tourisme</a></li>
+        <li><a href="../../actualites">Actualités</a></li>
+        <li><a href="../../contact">Contact</a></li>
+        <li><a href="../../login" class="active">Se connecter</a></li>
       </ul>
     </nav>
   </header>
